--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Mon Jun 11 17:24:08 PDT 2012
+#Mon Jul 09 21:31:30 PDT 2012
 eclipse.preferences.version=1
 encoding//Debug_5509/app_code/subdir_rules.mk=UTF-8
 encoding//Debug_5509/app_code/subdir_vars.mk=UTF-8
@@ -21,3 +21,20 @@ encoding//Debug_5509/otradio/cc1101/subdir_vars.mk=UTF-8
 encoding//Debug_5509/sources.mk=UTF-8
 encoding//Debug_5509/subdir_rules.mk=UTF-8
 encoding//Debug_5509/subdir_vars.mk=UTF-8
+encoding//Release_5509/app_code/subdir_rules.mk=UTF-8
+encoding//Release_5509/app_code/subdir_vars.mk=UTF-8
+encoding//Release_5509/makefile=UTF-8
+encoding//Release_5509/objects.mk=UTF-8
+encoding//Release_5509/otkernel/native/subdir_rules.mk=UTF-8
+encoding//Release_5509/otkernel/native/subdir_vars.mk=UTF-8
+encoding//Release_5509/otlib/subdir_rules.mk=UTF-8
+encoding//Release_5509/otlib/subdir_vars.mk=UTF-8
+encoding//Release_5509/otplatform/msp430f5/subdir_rules.mk=UTF-8
+encoding//Release_5509/otplatform/msp430f5/subdir_vars.mk=UTF-8
+encoding//Release_5509/otplatform/msp430f5/usb_cdc_driver/subdir_rules.mk=UTF-8
+encoding//Release_5509/otplatform/msp430f5/usb_cdc_driver/subdir_vars.mk=UTF-8
+encoding//Release_5509/otplatform/msp430f5_lib/subdir_rules.mk=UTF-8
+encoding//Release_5509/otplatform/msp430f5_lib/subdir_vars.mk=UTF-8
+encoding//Release_5509/otradio/cc1101/subdir_rules.mk=UTF-8
+encoding//Release_5509/otradio/cc1101/subdir_vars.mk=UTF-8
+encoding//Release_5509/sources.mk=UTF-8
