--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.project
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.project
@@ -58,7 +58,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
-					<value>true</value>
+					<value>false</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.useDefaultBuildCmd</key>
