--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/Debug_5509/makefile
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/Debug_5509/makefile
@@ -4,7 +4,7 @@
 
 SHELL = cmd.exe
 
-CG_TOOL_ROOT := C:/ti/ccsv5/tools/compiler/msp430
+CG_TOOL_ROOT := C:/ti/ccsv5/tools/compiler/msp430_4.1.1
 
 ORDERED_OBJS += \
 $(GEN_CMDS__FLAG) \
@@ -173,7 +173,7 @@ all: PaLFi_Master.out
 PaLFi_Master.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: MSP430 Linker'
-	"C:/ti/ccsv5/tools/compiler/msp430/bin/cl430" -vmspx --abi=coffabi --code_model=small --data_model=small -O1 --opt_for_speed=0 -g --define=__CCSv5__ --define=__LITTLE_ENDIAN__ --define=__MSP430F5509__ --define=BOARD_RF430USB_5509 --define=DEBUG_ON --diag_warning=225 --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU23 --silicon_errata=CPU40 --plain_char=unsigned --single_inline --printf_support=minimal -z -m"PaLFi_Master.map" --stack_size=160 --heap_size=160 --use_hw_mpy=F5 -i"C:/ti/ccsv5/ccs_base/msp430/include" -i"C:/ti/ccsv5/tools/compiler/msp430/lib" -i"C:/ti/ccsv5/tools/compiler/msp430/include" --reread_libs --warn_sections --rom_model -o "PaLFi_Master.out" $(ORDERED_OBJS)
+	"C:/ti/ccsv5/tools/compiler/msp430_4.1.1/bin/cl430" -vmspx --abi=coffabi --code_model=small --data_model=small -O1 --opt_for_speed=0 -g --define=__CCSv5__ --define=__LITTLE_ENDIAN__ --define=__MSP430F5509__ --define=BOARD_RF430USB_5509 --define=DEBUG_ON --diag_warning=225 --display_error_number --silicon_errata=CPU21 --silicon_errata=CPU22 --silicon_errata=CPU23 --silicon_errata=CPU40 --plain_char=unsigned --single_inline --printf_support=minimal -z -m"PaLFi_Master.map" --stack_size=160 --heap_size=160 --use_hw_mpy=F5 -i"C:/ti/ccsv5/ccs_base/msp430/include" -i"C:/ti/ccsv5/tools/compiler/msp430_4.1.1/lib" -i"C:/ti/ccsv5/tools/compiler/msp430_4.1.1/include" --reread_libs --warn_sections --rom_model -o "PaLFi_Master.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
