--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//Debug_5509/app_code/subdir_rules.mk=UTF-8
 encoding//Debug_5509/app_code/subdir_vars.mk=UTF-8
+encoding//Debug_5509/applets/subdir_rules.mk=UTF-8
+encoding//Debug_5509/applets/subdir_vars.mk=UTF-8
 encoding//Debug_5509/makefile=UTF-8
 encoding//Debug_5509/objects.mk=UTF-8
 encoding//Debug_5509/otkernel/native/subdir_rules.mk=UTF-8
