--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Slave/.settings/org.eclipse.core.resources.prefs
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Slave/.settings/org.eclipse.core.resources.prefs
@@ -1,15 +1,24 @@
-#Thu Aug 02 16:04:20 PDT 2012
 eclipse.preferences.version=1
 encoding//Debug_RF430F5978/app_code/subdir_rules.mk=UTF-8
 encoding//Debug_RF430F5978/app_code/subdir_vars.mk=UTF-8
+encoding//Debug_RF430F5978/applets/subdir_rules.mk=UTF-8
+encoding//Debug_RF430F5978/applets/subdir_vars.mk=UTF-8
 encoding//Debug_RF430F5978/makefile=UTF-8
 encoding//Debug_RF430F5978/objects.mk=UTF-8
 encoding//Debug_RF430F5978/otkernel/native/subdir_rules.mk=UTF-8
 encoding//Debug_RF430F5978/otkernel/native/subdir_vars.mk=UTF-8
 encoding//Debug_RF430F5978/otlib/subdir_rules.mk=UTF-8
 encoding//Debug_RF430F5978/otlib/subdir_vars.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/applets_capi/subdir_rules.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/applets_capi/subdir_vars.mk=UTF-8
 encoding//Debug_RF430F5978/otlibext/applets_std/subdir_rules.mk=UTF-8
 encoding//Debug_RF430F5978/otlibext/applets_std/subdir_vars.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/applets_std_unused/subdir_rules.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/applets_std_unused/subdir_vars.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/bintex/subdir_rules.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/bintex/subdir_vars.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/hb_coap/subdir_rules.mk=UTF-8
+encoding//Debug_RF430F5978/otlibext/hb_coap/subdir_vars.mk=UTF-8
 encoding//Debug_RF430F5978/otplatform/cc430/subdir_rules.mk=UTF-8
 encoding//Debug_RF430F5978/otplatform/cc430/subdir_vars.mk=UTF-8
 encoding//Debug_RF430F5978/otplatform/cc430_lib/subdir_rules.mk=UTF-8
