--- a/apps/demo_opmode/proj_ccsv5/opmode_std/.project
+++ b/apps/demo_opmode/proj_ccsv5/opmode_std/.project
@@ -97,11 +97,6 @@
 			<location>B:/otlib</location>
 		</link>
 		<link>
-			<name>otlibext</name>
-			<type>2</type>
-			<location>B:/otlibext</location>
-		</link>
-		<link>
 			<name>app_code/app_config.h</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/code/app_config.h</locationURI>
@@ -110,6 +105,11 @@
 			<name>app_code/build_config.h</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/code/build_config.h</locationURI>
+		</link>
+		<link>
+			<name>app_code/data_default.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/code/data_default.c</locationURI>
 		</link>
 		<link>
 			<name>app_code/extf_config.h</name>
@@ -122,9 +122,59 @@
 			<locationURI>PARENT-2-PROJECT_LOC/code/main.c</locationURI>
 		</link>
 		<link>
+			<name>app_code/main_inc_AG430DK.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/code/support/main_inc_AG430DK.c</locationURI>
+		</link>
+		<link>
+			<name>app_code/main_inc_EM430RF.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/code/support/main_inc_EM430RF.c</locationURI>
+		</link>
+		<link>
 			<name>app_code/platform_config.h</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/code/platform_config.h</locationURI>
+		</link>
+		<link>
+			<name>applets/beacon_discovery.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_capi/beacon_discovery.c</locationURI>
+		</link>
+		<link>
+			<name>applets/collect_sensorlist.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_capi/collect_sensorlist.c</locationURI>
+		</link>
+		<link>
+			<name>applets/dll_sig_rfinit.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/dll_sig_rfinit.c</locationURI>
+		</link>
+		<link>
+			<name>applets/dll_sig_rfterminate_2.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/dll_sig_rfterminate_2.c</locationURI>
+		</link>
+		<link>
+			<name>applets/network_sig_route.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/network_sig_route.c</locationURI>
+		</link>
+		<link>
+			<name>applets/sys_sig_panic.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/sys_sig_panic.c</locationURI>
+		</link>
+		<link>
+			<name>applets/sys_sig_powerdown.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_std/sys_sig_powerdown.c</locationURI>
+		</link>
+		<link>
+			<name>applets/udp_querytoken.c</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/otlibext/applets_capi/udp_querytoken.c</locationURI>
 		</link>
 		<link>
 			<name>otplatform/cc430</name>
