--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//Debug_5509/applets/subdir_rules.mk=UTF-8
 encoding//Debug_5509/applets/subdir_vars.mk=UTF-8
 encoding//Debug_5509/makefile=UTF-8
 encoding//Debug_5509/objects.mk=UTF-8
+encoding//Debug_5509/otkernel/gulp/subdir_rules.mk=UTF-8
+encoding//Debug_5509/otkernel/gulp/subdir_vars.mk=UTF-8
 encoding//Debug_5509/otkernel/native/subdir_rules.mk=UTF-8
 encoding//Debug_5509/otkernel/native/subdir_vars.mk=UTF-8
 encoding//Debug_5509/otlib/subdir_rules.mk=UTF-8
