--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Slave/Debug_RF430F5978/makefile
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Slave/Debug_RF430F5978/makefile
@@ -11,21 +11,23 @@ $(GEN_CMDS__FLAG) \
 "./app_code/palfi.obj" \
 "./app_code/main.obj" \
 "./applets/udp_querytoken.obj" \
-"./applets/sys_sig_rfaterminate_2.obj" \
-"./applets/sys_sig_rfainit.obj" \
+"./applets/sys_sig_powerdown_[msp430slow].obj" \
 "./applets/sys_sig_panic.obj" \
 "./applets/network_sig_route.obj" \
 "./applets/mpipe_sig_done.obj" \
+"./applets/dll_sig_rfterminate_2.obj" \
+"./applets/dll_sig_rfinit.obj" \
 "./applets/collect_sensorlist.obj" \
 "./applets/beacon_discovery.obj" \
-"./otkernel/native/system.obj" \
+"./otkernel/gulp/system_gulp.obj" \
 "./otlib/veelite.obj" \
 "./otlib/session.obj" \
 "./otlib/queue.obj" \
-"./otlib/ndef.obj" \
+"./otlib/mpipe.obj" \
 "./otlib/m2_transport.obj" \
 "./otlib/m2_network.obj" \
 "./otlib/m2_encode.obj" \
+"./otlib/m2_dll.obj" \
 "./otlib/external.obj" \
 "./otlib/crypto_aes128.obj" \
 "./otlib/crc16.obj" \
@@ -40,16 +42,17 @@ $(GEN_CMDS__FLAG) \
 "./otlib/alp_api_server.obj" \
 "./otlib/alp_api_client.obj" \
 "./otlib/OT_utils.obj" \
+"./otlib/OTAPI_tasker.obj" \
 "./otlib/OTAPI_logger.obj" \
 "./otplatform/cc430/veelite_core_X2_CC430.obj" \
 "./otplatform/cc430/platform_CC430.obj" \
 "./otplatform/cc430/mpipe_CC430_uart.obj" \
-"./otplatform/cc430/mpipe_CC430_i2c.obj" \
 "./otplatform/cc430_lib/cc430_ucs.obj" \
 "./otplatform/cc430_lib/cc430_tim.obj" \
 "./otplatform/cc430_lib/cc430_rtc.obj" \
 "./otplatform/cc430_lib/cc430_rf.obj" \
 "./otplatform/cc430_lib/cc430_pmm.obj" \
+"./otplatform/cc430_lib/cc430_map.obj" \
 "./otplatform/cc430_lib/cc430_gpio.obj" \
 "./otplatform/cc430_lib/cc430_flash.obj" \
 "./otplatform/cc430_lib/cc430_dma.obj" \
@@ -70,7 +73,7 @@ RMDIR := RMDIR /S/Q
 -include otplatform/cc430_lib/subdir_vars.mk
 -include otplatform/cc430/subdir_vars.mk
 -include otlib/subdir_vars.mk
--include otkernel/native/subdir_vars.mk
+-include otkernel/gulp/subdir_vars.mk
 -include applets/subdir_vars.mk
 -include app_code/subdir_vars.mk
 -include subdir_rules.mk
@@ -78,7 +81,7 @@ RMDIR := RMDIR /S/Q
 -include otplatform/cc430_lib/subdir_rules.mk
 -include otplatform/cc430/subdir_rules.mk
 -include otlib/subdir_rules.mk
--include otkernel/native/subdir_rules.mk
+-include otkernel/gulp/subdir_rules.mk
 -include applets/subdir_rules.mk
 -include app_code/subdir_rules.mk
 -include objects.mk
@@ -182,10 +185,10 @@ PaLFi_Slave.out: $(OBJS) $(CMD_SRCS) $(GEN_CMDS)
 # Other Targets
 clean:
 	-$(RM) $(MSP430_EXECUTABLE_OUTPUTS__QUOTED) "PaLFi_Slave.out"
-	-$(RM) "otradio\cc430\radio_CC430.pp" "otplatform\cc430_lib\cc430_crc.pp" "otplatform\cc430_lib\cc430_dma.pp" "otplatform\cc430_lib\cc430_flash.pp" "otplatform\cc430_lib\cc430_gpio.pp" "otplatform\cc430_lib\cc430_pmm.pp" "otplatform\cc430_lib\cc430_rf.pp" "otplatform\cc430_lib\cc430_rtc.pp" "otplatform\cc430_lib\cc430_tim.pp" "otplatform\cc430_lib\cc430_ucs.pp" "otplatform\cc430\mpipe_CC430_i2c.pp" "otplatform\cc430\mpipe_CC430_uart.pp" "otplatform\cc430\platform_CC430.pp" "otplatform\cc430\veelite_core_X2_CC430.pp" "otlib\OTAPI_logger.pp" "otlib\OT_utils.pp" "otlib\alp_api_client.pp" "otlib\alp_api_server.pp" "otlib\alp_dashforth.pp" "otlib\alp_filedata.pp" "otlib\alp_logger.pp" "otlib\alp_main.pp" "otlib\alp_security.pp" "otlib\alp_sensor.pp" "otlib\auth.pp" "otlib\buffers.pp" "otlib\crc16.pp" "otlib\crypto_aes128.pp" "otlib\external.pp" "otlib\m2_encode.pp" "otlib\m2_network.pp" "otlib\m2_transport.pp" "otlib\ndef.pp" "otlib\queue.pp" "otlib\session.pp" "otlib\veelite.pp" "otkernel\native\system.pp" 
-	-$(RM) "applets\beacon_discovery.pp" "applets\collect_sensorlist.pp" "applets\mpipe_sig_done.pp" "applets\network_sig_route.pp" "applets\sys_sig_panic.pp" "applets\sys_sig_rfainit.pp" "applets\sys_sig_rfaterminate_2.pp" "applets\udp_querytoken.pp" "app_code\main.pp" "app_code\palfi.pp" 
-	-$(RM) "otradio\cc430\radio_CC430.obj" "otplatform\cc430_lib\cc430_crc.obj" "otplatform\cc430_lib\cc430_dma.obj" "otplatform\cc430_lib\cc430_flash.obj" "otplatform\cc430_lib\cc430_gpio.obj" "otplatform\cc430_lib\cc430_pmm.obj" "otplatform\cc430_lib\cc430_rf.obj" "otplatform\cc430_lib\cc430_rtc.obj" "otplatform\cc430_lib\cc430_tim.obj" "otplatform\cc430_lib\cc430_ucs.obj" "otplatform\cc430\mpipe_CC430_i2c.obj" "otplatform\cc430\mpipe_CC430_uart.obj" "otplatform\cc430\platform_CC430.obj" "otplatform\cc430\veelite_core_X2_CC430.obj" "otlib\OTAPI_logger.obj" "otlib\OT_utils.obj" "otlib\alp_api_client.obj" "otlib\alp_api_server.obj" "otlib\alp_dashforth.obj" "otlib\alp_filedata.obj" "otlib\alp_logger.obj" "otlib\alp_main.obj" "otlib\alp_security.obj" "otlib\alp_sensor.obj" "otlib\auth.obj" "otlib\buffers.obj" "otlib\crc16.obj" "otlib\crypto_aes128.obj" "otlib\external.obj" "otlib\m2_encode.obj" "otlib\m2_network.obj" "otlib\m2_transport.obj" "otlib\ndef.obj" "otlib\queue.obj" "otlib\session.obj" "otlib\veelite.obj" 
-	-$(RM) "otkernel\native\system.obj" "applets\beacon_discovery.obj" "applets\collect_sensorlist.obj" "applets\mpipe_sig_done.obj" "applets\network_sig_route.obj" "applets\sys_sig_panic.obj" "applets\sys_sig_rfainit.obj" "applets\sys_sig_rfaterminate_2.obj" "applets\udp_querytoken.obj" "app_code\main.obj" "app_code\palfi.obj" 
+	-$(RM) "otradio\cc430\radio_CC430.pp" "otplatform\cc430_lib\cc430_crc.pp" "otplatform\cc430_lib\cc430_dma.pp" "otplatform\cc430_lib\cc430_flash.pp" "otplatform\cc430_lib\cc430_gpio.pp" "otplatform\cc430_lib\cc430_map.pp" "otplatform\cc430_lib\cc430_pmm.pp" "otplatform\cc430_lib\cc430_rf.pp" "otplatform\cc430_lib\cc430_rtc.pp" "otplatform\cc430_lib\cc430_tim.pp" "otplatform\cc430_lib\cc430_ucs.pp" "otplatform\cc430\mpipe_CC430_uart.pp" "otplatform\cc430\platform_CC430.pp" "otplatform\cc430\veelite_core_X2_CC430.pp" "otlib\OTAPI_logger.pp" "otlib\OTAPI_tasker.pp" "otlib\OT_utils.pp" "otlib\alp_api_client.pp" "otlib\alp_api_server.pp" "otlib\alp_dashforth.pp" "otlib\alp_filedata.pp" "otlib\alp_logger.pp" "otlib\alp_main.pp" "otlib\alp_security.pp" "otlib\alp_sensor.pp" "otlib\auth.pp" "otlib\buffers.pp" "otlib\crc16.pp" "otlib\crypto_aes128.pp" "otlib\external.pp" "otlib\m2_dll.pp" "otlib\m2_encode.pp" "otlib\m2_network.pp" "otlib\m2_transport.pp" "otlib\mpipe.pp" "otlib\queue.pp" "otlib\session.pp" 
+	-$(RM) "otlib\veelite.pp" "otkernel\gulp\system_gulp.pp" "applets\beacon_discovery.pp" "applets\collect_sensorlist.pp" "applets\dll_sig_rfinit.pp" "applets\dll_sig_rfterminate_2.pp" "applets\mpipe_sig_done.pp" "applets\network_sig_route.pp" "applets\sys_sig_panic.pp" "applets\sys_sig_powerdown_[msp430slow].pp" "applets\udp_querytoken.pp" "app_code\main.pp" "app_code\palfi.pp" 
+	-$(RM) "otradio\cc430\radio_CC430.obj" "otplatform\cc430_lib\cc430_crc.obj" "otplatform\cc430_lib\cc430_dma.obj" "otplatform\cc430_lib\cc430_flash.obj" "otplatform\cc430_lib\cc430_gpio.obj" "otplatform\cc430_lib\cc430_map.obj" "otplatform\cc430_lib\cc430_pmm.obj" "otplatform\cc430_lib\cc430_rf.obj" "otplatform\cc430_lib\cc430_rtc.obj" "otplatform\cc430_lib\cc430_tim.obj" "otplatform\cc430_lib\cc430_ucs.obj" "otplatform\cc430\mpipe_CC430_uart.obj" "otplatform\cc430\platform_CC430.obj" "otplatform\cc430\veelite_core_X2_CC430.obj" "otlib\OTAPI_logger.obj" "otlib\OTAPI_tasker.obj" "otlib\OT_utils.obj" "otlib\alp_api_client.obj" "otlib\alp_api_server.obj" "otlib\alp_dashforth.obj" "otlib\alp_filedata.obj" "otlib\alp_logger.obj" "otlib\alp_main.obj" "otlib\alp_security.obj" "otlib\alp_sensor.obj" "otlib\auth.obj" "otlib\buffers.obj" "otlib\crc16.obj" "otlib\crypto_aes128.obj" "otlib\external.obj" "otlib\m2_dll.obj" "otlib\m2_encode.obj" "otlib\m2_network.obj" "otlib\m2_transport.obj" "otlib\mpipe.obj" 
+	-$(RM) "otlib\queue.obj" "otlib\session.obj" "otlib\veelite.obj" "otkernel\gulp\system_gulp.obj" "applets\beacon_discovery.obj" "applets\collect_sensorlist.obj" "applets\dll_sig_rfinit.obj" "applets\dll_sig_rfterminate_2.obj" "applets\mpipe_sig_done.obj" "applets\network_sig_route.obj" "applets\sys_sig_panic.obj" "applets\sys_sig_powerdown_[msp430slow].obj" "applets\udp_querytoken.obj" "app_code\main.obj" "app_code\palfi.obj" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
