--- a/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
+++ b/apps/demo_palfi/proj_ccsv5/PaLFi_Master/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//Debug_5509/app_code/subdir_vars.mk=UTF-8
 encoding//Debug_5509/applets/subdir_rules.mk=UTF-8
 encoding//Debug_5509/applets/subdir_vars.mk=UTF-8
 encoding//Debug_5509/makefile=UTF-8
+encoding//Debug_5509/objects.mk=UTF-8
 encoding//Debug_5509/otkernel/gulp/subdir_rules.mk=UTF-8
 encoding//Debug_5509/otkernel/gulp/subdir_vars.mk=UTF-8
 encoding//Debug_5509/otlib/subdir_rules.mk=UTF-8
@@ -16,6 +17,9 @@ encoding//Debug_5509/otplatform/msp430f5_lib/subdir_rules.mk=UTF-8
 encoding//Debug_5509/otplatform/msp430f5_lib/subdir_vars.mk=UTF-8
 encoding//Debug_5509/otradio/cc1101/subdir_rules.mk=UTF-8
 encoding//Debug_5509/otradio/cc1101/subdir_vars.mk=UTF-8
+encoding//Debug_5509/sources.mk=UTF-8
+encoding//Debug_5509/subdir_rules.mk=UTF-8
+encoding//Debug_5509/subdir_vars.mk=UTF-8
 encoding//Release_5509/app_code/subdir_rules.mk=UTF-8
 encoding//Release_5509/app_code/subdir_vars.mk=UTF-8
 encoding//Release_5509/applets/subdir_rules.mk=UTF-8
